# smash_you_some_haskell

./: N.yaml  README.md  context-switches.sh  deploy.sh  load.sh  node-fixture.yaml  nt.yaml  postgres.yaml  ppp.yaml  psql.yaml  ratio.sh  req  reset-minikube.sh  smash.sh  smashyousomehaskell.md  stats-insertion.sh  stats-merge.sh  stats.sh  watch.sh
deployments/: haskell-N.yaml  haskell-N1-2.yaml  haskell-N2.yaml  haskell-nt-2.yaml  node-1-nolr.yaml  node-2.yaml
minirepo/bazel/repository/: haskell.bzl
minirepo/example-service/: BUILD.bazel
minirepo/haskell-fixture/: BUILD.bazel
minirepo/haskell-fixture/impl/: Main.hs
minirepo/performance-demo/: BUILD.bazel
minirepo/performance-demo/impl/: Main.hs
minirepo/performance-demo/insertion/: Main.hs
minirepo/performance-demo/insertion100/: Main.hs
minirepo/performance-demo/insertion150/: Main.hs
minirepo/performance-demo/insertion200/: Main.hs
minirepo/performance-demo/insertion64/: Main.hs
minirepo/performance-demo/merge/: Main.hs
minirepo/performance-demo/merge100/: Main.hs
minirepo/performance-demo/merge150/: Main.hs
minirepo/performance-demo/merge200/: Main.hs
minirepo/performance-demo/merge64/: Main.hs
nodejs-fixture/: Dockerfile  node.js  package-lock.json  package.json
pinned/: forward-psql.sh  load.sh  pinned-N1.sh  pinned-node.sh  pinned-nt.sh  smash.sh
