load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_binary",
)
load("@io_bazel_rules_docker//cc:image.bzl", "cc_image")

haskell_binary(
    name = "impl",
    srcs = [
        "impl/Main.hs",
    ],
    src_strip_prefix = "impl",
    deps = [
        "@stackage//:base",
        "@stackage//:criterion",
        "@stackage//:random",
        "@stackage//:vector",
        "@stackage//:vector-algorithms",
    ],
    compiler_flags = [
        "-optl-static",
        "-Wall",
        "-Werror",
    ],
)

haskell_binary(
    name = "merge",
    srcs = [
        "merge/Main.hs",
    ],
    src_strip_prefix = "merge",
    deps = [
        "@stackage//:base",
        "@stackage//:vector",
        "@stackage//:vector-algorithms",
    ],
    compiler_flags = [
        "-optl-static",
        "-Wall",
        "-Werror",
    ],
)

haskell_binary(
    name = "insertion",
    srcs = [
        "insertion/Main.hs",
    ],
    src_strip_prefix = "insertion",
    deps = [
        "@stackage//:base",
        "@stackage//:vector",
        "@stackage//:vector-algorithms",
    ],
    compiler_flags = [
        "-optl-static",
        "-Wall",
        "-Werror",
    ],
)

haskell_binary(
    name = "merge100",
    srcs = [
        "merge100/Main.hs",
    ],
    src_strip_prefix = "merge100",
    deps = [
        "@stackage//:base",
        "@stackage//:vector",
        "@stackage//:vector-algorithms",
    ],
    compiler_flags = [
        "-optl-static",
        "-Wall",
        "-Werror",
    ],
)

haskell_binary(
    name = "insertion100",
    srcs = [
        "insertion100/Main.hs",
    ],
    src_strip_prefix = "insertion100",
    deps = [
        "@stackage//:base",
        "@stackage//:vector",
        "@stackage//:vector-algorithms",
    ],
    compiler_flags = [
        "-optl-static",
        "-Wall",
        "-Werror",
    ],
)


haskell_binary(
    name = "merge150",
    srcs = [
        "merge150/Main.hs",
    ],
    src_strip_prefix = "merge150",
    deps = [
        "@stackage//:base",
        "@stackage//:vector",
        "@stackage//:vector-algorithms",
    ],
    compiler_flags = [
        "-optl-static",
        "-Wall",
        "-Werror",
    ],
)

haskell_binary(
    name = "insertion150",
    srcs = [
        "insertion150/Main.hs",
    ],
    src_strip_prefix = "insertion150",
    deps = [
        "@stackage//:base",
        "@stackage//:vector",
        "@stackage//:vector-algorithms",
    ],
    compiler_flags = [
        "-optl-static",
        "-Wall",
        "-Werror",
    ],
)


haskell_binary(
    name = "merge200",
    srcs = [
        "merge200/Main.hs",
    ],
    src_strip_prefix = "merge200",
    deps = [
        "@stackage//:base",
        "@stackage//:vector",
        "@stackage//:vector-algorithms",
    ],
    compiler_flags = [
        "-optl-static",
        "-Wall",
        "-Werror",
    ],
)

haskell_binary(
    name = "insertion200",
    srcs = [
        "insertion200/Main.hs",
    ],
    src_strip_prefix = "insertion200",
    deps = [
        "@stackage//:base",
        "@stackage//:vector",
        "@stackage//:vector-algorithms",
    ],
    compiler_flags = [
        "-optl-static",
        "-Wall",
        "-Werror",
    ],
)





cc_image(
    name = "impl-image",
    binary = ":impl",
)



